fixed dark mode errors

--- a/public/css/f-accounts.css
+++ b/public/css/f-accounts.css
@@ -35,8 +35,6 @@
     display: flex;
 
     gap: 15px;
-
-    background-color: #FFFFFF;
     
     border-radius: 16px;
 }
