--- a/public/css/s-studyplan.css
+++ b/public/css/s-studyplan.css
@@ -35,7 +35,7 @@ h3, h4 {
     font-weight: 500;
     font-size: 16px;
     font-family: inter;
-
+    color: var(--textLight);
     margin: 0;
 }
 
